force-app/main/default/objects/DC_Cabinet__c/DC_Cabinet__c.object-meta.xml
<CustomObject>
    <label>Cabinet</label>
    <nameField>
        <label>Cabinet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cabinets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>