force-app/main/default/objects/DC_Cabinet__c/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <description>Access code for this cabinet</description>
    <label>Access Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>