force-app/main/default/objects/DC_Cabinet__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Cabinets</relationshipLabel>
    <relationshipName>Cabinets</relationshipName>
    <type>Lookup</type>
</CustomField>