force-app/main/default/objects/DC_Cabinet__c/fields/Cabinet_Chassis_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Chassis_Weight_lbs__c</fullName>
    <description>Weight of the Cabinet Chassis when empty.</description>
    <inlineHelpText>Weight of the Cabinet Chassis when empty.</inlineHelpText>
    <label>Cabinet Chassis Weight (lbs)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>