force-app/main/default/objects/DC_Cabinet__c/fields/Cabinet_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Equivalent__c</fullName>
    <description>Determines the number of cabinets this represents (1.0,0.5,0.33)</description>
    <label>Cabinet Equivalent</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>