force-app/main/default/objects/DC_Cabinet__c/fields/Cabinet_Type__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the cabinet type from available list to populate dimensions for this Cabinet.</inlineHelpText>
    <label>Cabinet Type</label>
    <referenceTo>Cabinet_Type__c</referenceTo>
    <relationshipLabel>Cabinets</relationshipLabel>
    <relationshipName>Cabinets</relationshipName>
    <type>Lookup</type>
</CustomField>