force-app/main/default/objects/DC_Cabinet__c/fields/Cage__c.field-meta.xml
<CustomField>
    <fullName>Cage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cage this Cabinet is in.</description>
    <label>Cage</label>
    <referenceTo>DC_Cage__c</referenceTo>
    <relationshipLabel>Cabinets</relationshipLabel>
    <relationshipName>Cabinets</relationshipName>
    <type>Lookup</type>
</CustomField>