force-app/main/default/objects/DC_Cabinet__c/fields/Committed_Power__c.field-meta.xml
<CustomField>
    <fullName>Committed_Power__c</fullName>
    <formula>TEXT(Asset__r.Power_Circuit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committed Power</label>
    <type>Text</type>
</CustomField>