force-app/main/default/objects/DC_Cabinet__c/fields/Connected_Power__c.field-meta.xml
<CustomField>
    <fullName>Connected_Power__c</fullName>
    <label>Connected Power</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>