force-app/main/default/objects/DC_Cabinet__c/fields/Customer_Provided_Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Customer_Provided_Cabinet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked indicates that customer provided this Cabinet chassis.</description>
    <inlineHelpText>Checked indicates that customer provided this Cabinet chassis.</inlineHelpText>
    <label>Customer Provided Cabinet</label>
    <type>Checkbox</type>
</CustomField>