force-app/main/default/objects/DC_Cabinet__c/fields/Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Cage__r.Data_Hall__r.Id , Cage__r.Data_Hall__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Hall</label>
    <type>Text</type>
</CustomField>