force-app/main/default/objects/DC_Cabinet__c/fields/Data_Hall_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PR1031160-862 Updates to Panel, Cabinet &amp; cage fields to help work the subflows</description>
    <label>Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Cabinets</relationshipLabel>
    <relationshipName>Cabinets</relationshipName>
    <type>Lookup</type>
</CustomField>