force-app/main/default/objects/DC_Cabinet__c/fields/Depth_in__c.field-meta.xml
<CustomField>
    <fullName>Depth_in__c</fullName>
    <description>The depth of the cabinet in inches.</description>
    <label>Depth (in)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>