force-app/main/default/objects/DC_Cabinet__c/fields/Equipment_Weight__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Weight__c</fullName>
    <description>Combined weight, in pounds, of all of the Equipment within this cabinet.</description>
    <label>Equipment Weight (lbs)</label>
    <summarizedField>Cabinet_Equipment__c.Weight_lbs__c</summarizedField>
    <summaryForeignKey>Cabinet_Equipment__c.Cabinet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>