force-app/main/default/objects/DC_Cabinet__c/fields/Legacy_Cabinet_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Cabinet_Name__c</fullName>
    <description>The legacy name of this cabinet, according to the Rack Inventory spreedsheets.</description>
    <label>Legacy Cabinet Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>