force-app/main/default/objects/DC_Cabinet__c/fields/Redundancy_Factor__c.field-meta.xml
<CustomField>
    <fullName>Redundancy_Factor__c</fullName>
    <description>default=2</description>
    <label>Redundancy Factor</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>