force-app/main/default/objects/DC_Cabinet__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <formula>2 *  Cabinet_Equivalent__c * (( Depth_in__c * Width_in__c ) / 144)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Square Footage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>