force-app/main/default/objects/DC_Cabinet__c/fields/Total_Cabinet_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Cabinet_Weight__c</fullName>
    <description>The combined weight of the Cabinet Chassis and all of the Equipment within it.</description>
    <formula>Equipment_Weight__c +  Cabinet_Chassis_Weight_lbs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The combined weight of the Cabinet Chassis and all of the Equipment within it.</inlineHelpText>
    <label>Total Cabinet Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>