force-app/main/default/objects/DC_Cabinet__c/fields/Width_in__c.field-meta.xml
<CustomField>
    <fullName>Width_in__c</fullName>
    <description>The width of the cabinet in inches.</description>
    <label>Width (in)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>