force-app/main/default/objects/DC_Cabinet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>