force-app/main/default/objects/DC_Cabinet__c/listViews/X1102_Grand.listView-meta.xml
<ListView>
    <fullName>X1102_Grand</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>1102</value>
    </filters>
    <label>1102 Grand</label>
</ListView>