force-app/main/default/objects/DC_Cabinet__c/listViews/X1301_Fannin.listView-meta.xml
<ListView>
    <fullName>X1301_Fannin</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>1301</value>
    </filters>
    <label>1301 Fannin</label>
</ListView>