force-app/main/default/objects/DC_Cabinet__c/listViews/X210_N_Tucker.listView-meta.xml
<ListView>
    <fullName>X210_N_Tucker</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>210</value>
    </filters>
    <label>210 N Tucker</label>
</ListView>