force-app/main/default/objects/DC_Cabinet__c/listViews/X401_N_Broad.listView-meta.xml
<ListView>
    <fullName>X401_N_Broad</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>401</value>
    </filters>
    <label>401 N Broad</label>
</ListView>