force-app/main/default/objects/DC_Cabinet__c/listViews/X701_W_Henry_Datacenter.listView-meta.xml
<ListView>
    <fullName>X701_W_Henry_Datacenter</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>701</value>
    </filters>
    <label>701 W Henry</label>
</ListView>