force-app/main/default/objects/DC_Cabinet__c/listViews/X717_S_Wells.listView-meta.xml
<ListView>
    <fullName>X717_S_Wells</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>717</value>
    </filters>
    <label>717 S Wells</label>
</ListView>