force-app/main/default/objects/DC_Cabinet__c/listViews/X733_W_Henry.listView-meta.xml
<ListView>
    <fullName>X733_W_Henry</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>733</value>
    </filters>
    <label>733 W Henry</label>
</ListView>