force-app/main/default/objects/DC_Cabinet__c/listViews/X7801_Nieman_Road.listView-meta.xml
<ListView>
    <fullName>X7801_Nieman_Road</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>7801</value>
    </filters>
    <label>7801 Nieman Road</label>
</ListView>