force-app/main/default/objects/DC_Cabinet__c/listViews/X900_Walnut.listView-meta.xml
<ListView>
    <fullName>X900_Walnut</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Cabinet_Equivalent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>900</value>
    </filters>
    <label>900 Walnut</label>
</ListView>